<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">No Call Spam</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="contacts">Contacts</string>
    <string name="block_list">Block List</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_base_">Base_Activity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_call_lister">CallLister</string>
    <string name="create_new">Create New</string>
    <string name="open">Open</string>
    <string name="exit">Exit</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_block_list">BlockList</string>
    <string name="title_activity_login">Login</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="search_match_other">search_match_other</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_name">Phone</string>
    <string name="address">Address</string>
    <string name="contact_image">contact image</string>
    <string name="title_activity_incoming_call">IncomingCallActivity</string>
    <string name="save_data">savedata</string>
    <string name="home_address">homeaddress</string>
    <string name="add_contact">addcontact</string>
    <string name="first_name">firstname</string>
    <string name="phone_number">phonenumber</string>
    <string name="last_name">lastname</string>
    <string name="edit_contact_title">editcontacttitle</string>
    <string name="edit_button">editbutton</string>
    <string name="delete_button">deletebutton</string>

</resources>
