<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DisplayMessageActivity">


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_settings">


        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/create_new"
                android:title="@string/create_new" />
            <item android:id="@+id/open"
                android:title="@string/open" />
            <item android:id="@+id/refresh"
                android:title="@string/refresh"/>

        </menu>
    </item>

    <item android:id="@+id/contacts"
        android:title="@string/contacts"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_person"/>

    <item android:id="@+id/block_list"
        android:title="@string/block_list"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_discard"/>

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:uiOptions="splitActionBarWhenNarrow"/>


</menu>
















